<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sensor Info Database</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New Sensor</string>
    <string name="edit">Edit Sensor</string>
    <string name="delete">Delete Sensor</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="serial">Serial</string>
    <string name="data">Data</string>
    <string name="place">Place</string>
    <string name="time">Time</string>
    <string name="save">Save Sensor</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="viewdata">View Data</string>
</resources>
